# refactoring-2nd-cpp

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  expect.txt  main.cc
auto/: run.sh  test.sh
data/: invoices.json  plays.json
src/: create_statement_data.h  invoice.h  performance.h  play.h  statement.h
